--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -49,7 +49,7 @@
       <div class="col-6 col-md">
         <h5>Профиль</h5>
         <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'edit_profile' %}">Изменить профиль</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'account:edit_profile' %}">Изменить профиль</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'password_change' %}">Сменить пароль</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'password_reset' %}">Сбросить пароль</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Персонал для разработчиков</a></li>
@@ -70,7 +70,7 @@
       <div class="col-6 col-md">
         <h5>Организации</h5>
         <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'list_organisation' %}">Мои организации</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'account:list_organisation' %}">Мои организации</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Добавить организацию</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Условия</a></li>
         </ul>
