--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -3,11 +3,11 @@
 {% block body %}
 
 <h1>Dashboard</h1>
- <p>Welcome to your dashboard. You can <a href="{% url 'edit_profile' %}">edit your profile</a>
+ <p>Welcome to your dashboard. You can <a href="{% url 'account:edit_profile' %}">edit your profile</a>
 or <a href="{% url 'password_change' %}">Сменить пароль</a>.
  </p>
 <p>
-<p>Раздел организации <a href="{% url 'view_organisation_user' %}">Мои организации</a>
+<p>Раздел организации <a href="{% url 'account:list_organisation' %}">Мои организации</a>
 {% for type in type_print %}
 
 <p>  <a href=" ">{{type.type_print}}</a></p>
