edit template view_all_files_for_work_in_orders

--- a/users/templates/registration/password_reset_form.html
+++ b/users/templates/registration/password_reset_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block body %}
     <h1>Password reset</h1>
     <hr>
     <form action="{% url 'password_reset' %}" method="post">
