--- a/users/templates/registration/confirm_email.html
+++ b/users/templates/registration/confirm_email.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block body %}
     <div class="row">
         <p>Пожалуйста проверьте свою почту чтобы завершить регистрацию</p>
     </div>
