--- a/users/templates/registration/invalid_verify.html
+++ b/users/templates/registration/invalid_verify.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block body %}
     <div class="row">
         <p>Ваша ссылка не корректна, залогиньтесь снова</p>
         <a href="{% url 'login' %}">Залогиниться</a>
