--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -27,7 +27,7 @@
  {% endif %}
 
  {% if request.user.is_authenticated %}
- Hello {{ request.user.first_name|default:request.user.username }},
+ Hello {{ request.user.first_name|default:request.user.username }} Role: {{user.role}},
  <a href="{% url 'logout' %}">Logout</a>
  {% else %}
  <a href="{% url 'login' %}">Log-in</a>
