--- a/orders/templates/add_in.html
+++ b/orders/templates/add_in.html
@@ -4,90 +4,84 @@
 <h3> {{curent_order}}</h3>
 
 
+<table>
+    <thead>
+    <th>Дата</th>
+    <th>Платильщик</th>
+    <th>Оплата</th>
+    <th>Сумма</th>
+    <th>Статус</th>
+    </thead>
+
+    <tr>
+        <td>{{ Orders.created }}</td>
+        <td>{{ Orders.organisation_payer }}</td>
+        <td>{{ Orders.paid }} см.</td>
+        <td>{{ Orders.total_price }}</td>
+        <td>{{ Orders.status }}</td>
 
 
+        <td><a href="{% url 'orders:order_pay' Orders.id %}">Оплатить</a>
 
-
-
-
+        </td>
+    </tr>
+</table>
 
 
 <table>
-        <thead>
-        <th>Дата</th>
-           <th>Платильщик</th><th>Оплата</th>
-           <th>Сумма</th><th>Статус</th>
-       </thead>
+    <thead>
+    <th>Дата</th>
+    <th>Платильщик</th>
+    <th>Оплата</th>
+    <th>Сумма</th>
+    <th>Статус</th>
+    </thead>
 
-        <tr>
-            <td>{{ Orders.created }}</td>
-            <td>{{ Orders.organisation_payer }}</td>
-            <td>{{ Orders.paid }} см.</td>
-            <td>{{ Orders.total_price }}</td>
-            <td>{{ Orders.status }}</td>
-
-
-
-            <td>          <a href="{% url 'orders:order_pay' Orders.id %}">Оплатить</a>
-
-            </td>
-        </tr>
-            </table>
-
-
-
-
-
-
-
-
-
-<table>
-        <thead>
-        <th>Дата</th>
-           <th>Платильщик</th><th>Оплата</th>
-           <th>Сумма</th><th>Статус</th>
-       </thead>
-
-            </table>
+</table>
 <h5> Файлы которые можно добавить в заказ: </h5>
 
-    <table>
-        <thead>
-           <th>Картинка</th><th>Материал</th><th>Финишная обработка</th>
-           <th>Поля</th><th>Итого</th>
-       </thead>
+<table>
+    <thead>
+    <th>Картинка</th>
+    <th>Материал</th>
+    <th>Финишная обработка</th>
+    <th>Поля</th>
+    <th>Итого</th>
+    </thead>
 
-  {% for item in items %}
-        <tr>
-            <td><a>{% load thumbnail %} <img src="{% thumbnail item.images 100x0 %}" class="image-detail"></a></td>
-            <td>{{ item.material }}  руб. </td>
-            <td>{{ item.FinishWork }} руб.</td>
-            <td>{{ item.Fields }}</td>
-            <td>{{ item.price }}</td>
-            <td><a href="ADD_item/{{product.id}}">Добавить в заказ</a></td>
-        </tr>
-        {% endfor %}
-                    </table>
+    {% for item in items %}
+    <tr>
+        <td><a>{% load thumbnail %} <img src="{% thumbnail item.images 100x0 %}" class="image-detail"></a></td>
+        <td>{{ item.material }} руб.</td>
+        <td>{{ item.FinishWork }} руб.</td>
+        <td>{{ item.Fields }}</td>
+        <td>{{ item.price }}</td>
+        <td><a href="ADD_item/{{product.id}}">Добавить в заказ</a></td>
+    </tr>
+    {% endfor %}
+</table>
 
 <h5> Файлы в заказе: </h5>
 
-    <table>
-        <thead>
-           <th>Картинка</th><th>Материал</th><th>Финишная обработка</th>
-           <th>Поля</th><th>Итого</th>
-       </thead>
+<table>
+    <thead>
+    <th>Картинка</th>
+    <th>Материал</th>
+    <th>Финишная обработка</th>
+    <th>Поля</th>
+    <th>Итого</th>
+    </thead>
 
-  {% for i in items_in_order %}
-        <tr>
-            <td><a>{% load thumbnail %} <img src="{% thumbnail i.product.images 100x0 %}" class="image-detail"></a></td>
-            <td>{{ i.price_per_item }} руб.</td>
-            <td>{{ i.quantity }}</td>
-            <td>{{ i.total_price }} руб. </td>
-            <td><a href="/orders/del_item_in_order/{{order_id}}/{{item.id}}">Удалить</a></td>
+    {% for i in items_in_order %}
+    <tr>
+        <td><a>{% load thumbnail %} <img src="{% thumbnail i.product.images 100x0 %}" class="image-detail"></a></td>
+        <td>{{ i.price_per_item }} руб.</td>
+        <td>{{ i.quantity }}</td>
+        <td>{{ i.total_price }} руб.</td>
+        <td><a href="/orders/del_item_in_order/{{order_id}}/{{item.id}}">Удалить</a></td>
 
-        </tr>
-        {% endfor %}
-                    </table>
+    </tr>
+    {% endfor %}
+</table>
 
 {% endblock %}
