--- a/orders/templates/view_all_files_for_work_in_orders.html
+++ b/orders/templates/view_all_files_for_work_in_orders.html
@@ -2,44 +2,51 @@
 <title>{% block title %} {{curent_order}} {% endblock %}</title>
 {% block body %}
 <h3> {{curent_order}}</h3>
-    <table>
-        <thead>
-        <th>Дата</th>
-           <th>Платильщик</th><th>Оплата</th>
-           <th>Сумма</th><th>Статус</th>
-       </thead>
+<table>
+    <thead>
+    <th>ID</th>
+    <th>Дата</th>
+    <th>Платильщик</th>
+    <th>Оплата</th>
+    <th>Сумма</th>
+    <th>Статус</th>
+    </thead>
 
-{% for order in Orders %}
-        <tr>
-            <td>{{ order.created }}</td>
-            <td>{{ order.organisation_payer }}</td>
-            <td>{{ order.paid }} см.</td>
-            <td>{{ order.total_price }}</td>
-            <td>{{ order.status }}</td>
-            </td>
-        </tr>
-        {% endfor %}
-            </table>
+    {% for order in Orders %}
+    <tr>
+        <td>{{ order.id }}</td>
+        <td>{{ order.created }}</td>
+        <td>{{ order.organisation_payer }}</td>
+        <td>{{ order.paid }} см.</td>
+        <td>{{ order.total_price }}</td>
+        <td>{{ order.status }}</td>
+        </td>
+    </tr>
+    {% endfor %}
+</table>
 <h5> Файлы: </h5>
 
 
-  {% for item in num %}
+{% for item in num %}
 
-        <table>
-        <thead>
-           <th>ID</th><th>Link</th><th>Link</th><th>Финишная обработка</th>
-       </thead>
-          {% for i in item %}
-            <tr>
-            <td>{{ i.id }}</td>
-            <td><a>{% load thumbnail %} <img src="{% thumbnail i.product.images 100x0 %}" class="image-detail"></a></td>
-            <td> <a href="/media/{{ i.product }}" </a>Скачать</td>
-            <td> <a href="{% url 'files:about_file' i.id %}" </a>about</td>
-            <td>{{ i.product.material }} </td>
-<!--            <td>{{ i.product.FinishWork }} </td>-->
-</tr>
-        {% endfor %}
-                    </table>
-        {% endfor %}
+<table>
+    <thead>
+    <th>ID</th>
+    <th>Link</th>
+    <th>Link</th>
+    <th>Финишная обработка</th>
+    </thead>
+    {% for i in item %}
+    <tr>
+        <td>{{ i.id }}</td>
+        <td><a>{% load thumbnail %} <img src="{% thumbnail i.product.images 100x0 %}" class="image-detail"></a></td>
+        <td><a href="/media/{{ i.product }}" </a>Скачать</td>
+        <td><a href="{% url 'orders:about_file' i.id %}"</a>about</td>
+        <td>{{ i.product.material }}</td>
+        <!--            <td>{{ i.product.FinishWork }} </td>-->
+    </tr>
+    {% endfor %}
+</table>
+{% endfor %}
 
 {% endblock %}
