--- a/files/templates/price.html
+++ b/files/templates/price.html
@@ -2,51 +2,74 @@
 <title>{% block title %} Прайс-лист на широкоформатную печать {% endblock %}</title>
 {% block body %}
 {% if price_shirka.count > 0 %}
-    <h4>Широкоформатная печать: цена за 1 м2: </h4>
-    <table>
-        <thead>
-           <th>Материал</th><th>Тип печати</th><th>Цена</th>
-       </thead>
-        {% for field in price_shirka %}
-        <tr>
-            <td>{{ field.name }}</td>
+<h4>Широкоформатная печать: цена за 1 м2: </h4>
+<hr>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
 
-            <td>{{ field.type_print }} </td>
-            <td>{{ field.price }} руб.</td>
-        </tr>
-        {% endfor %}
-           </table>
+            <th>Материал</th>
+            <th>Тип печати</th>
+            <th>Цена</th>
+            </thead>
+            <tbody>
+            {% for field in price_shirka %}
+            <tr>
+                <td>{{ field.name }}</td>
+                <td>{{ field.type_print }}</td>
+                <td>{{ field.price }} руб.</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
 
-    <h4>Интерьерная печать: цена за 1 м2: </h4>
-        <table>
-        <thead>
-           <th>Материал</th><th>Тип печати</th><th>Цена</th>
-       </thead>
+<h4>Интерьерная печать: цена за 1 м2: </h4>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
+            <th>Материал</th>
+            <th>Тип печати</th>
+            <th>Цена</th>
+            </thead>
+            <tbody>
+            {% for field in price_interierka %}
+            <tr>
+                <td>{{ field.name }}</td>
+                <td>{{ field.type_print }}</td>
+                <td>{{ field.price }} руб.</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+<h4>УФ -Печать на жестких материалах: цена за 1 м2: </h4>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
+            <th>Материал</th>
+            <th>Тип печати</th>
+            <th>Цена</th>
+            </thead>
+            <tbody>
+            {% for field in price_UV %}
+            <tr>
+                <td>{{ field.name }}</td>
+                <td>{{ field.type_print }}</td>
+                <td>{{ field.price }} руб.</td>
+            </tr>
+             {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
 
-           {% for field in price_interierka %}
-        <tr>
-            <td>{{ field.name }}</td>
-            <td>{{ field.type_print }} </td>
-            <td>{{ field.price }} руб.</td>
-        </tr>
-        {% endfor %}
 
-    </table>
-  <h4>UV печать: цена за 1 м2: </h4>
-        <table>
-        <thead>
-           <th>Материал</th><th>Тип печати</th><th>Цена</th>
-       </thead>
+{% endif %}
 
-           {% for field in price_UV %}
-        <tr>
-            <td>{{ field.name }}</td>
-            <td>{{ field.type_print }} </td>
-            <td>{{ field.price }} руб.</td>
-        </tr>
-        {% endfor %}
-
-    </table>
-    {% endif %}
-
-    {% endblock %}
+{% endblock %}
