--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -13,7 +13,8 @@
                 <th>Оплата</th>
                 <th>Сумма</th>
                 <th>Статус</th>
-            </thead>
+             </thead>
+            <tbody>
 
             <tr>
                 <td>{{ Orders.created }}</td>
