--- a/orders/templates/view_all_files_for_work_in_orders.html
+++ b/orders/templates/view_all_files_for_work_in_orders.html
@@ -21,7 +21,7 @@
         <td>{{ order.id }}</td>
         <td>{{ order.created }}</td>
         <td>{{ order.organisation_payer }}</td>
-        <td>{{ order.paid }} см.</td>
+        <td>{{ order.paid }}</td>
         <td>{{ order.total_price }}</td>
         <td>{{ order.status }}</td>
         </td>
@@ -40,7 +40,7 @@
         <table class="table table-striped table-hover">
             <thead>
     <th>ID</th>
-    <th>Link</th>
+    <th>Preview</th>
     <th>Link</th>
     <th>Финишная обработка</th>
     </thead>
