--- a/orders/templates/all_view_orders.html
+++ b/orders/templates/all_view_orders.html
@@ -5,12 +5,15 @@
 
 {% if Orders.count > 0 %}
     <h2>Список Заказов В работе: </h2>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
 
-    <table>
-        <thead>
            <th>Заказ №</th><th>Платильщк</th><th>Оплачено</th>
            <th>Каменты</th><th>Статус</th><th>Дата заказа</th><th>Дата готовности</th>
-       </thead>
+         </thead>
+            <tbody>
         {% for order in Orders %}
         <tr>
             <td>{{ order.id }}</td>
@@ -23,7 +26,10 @@
             <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
         </tr>
         {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
 
-    </table>
     {% endif %}
     {% endblock %}
