--- a/orders/templates/view_all_files_for_work_in_orders.html
+++ b/orders/templates/view_all_files_for_work_in_orders.html
@@ -7,27 +7,27 @@
         <table class="table table-striped table-hover">
             <thead>
             <tr>
-    <th>ID</th>
-    <th>Дата</th>
-    <th>Платильщик</th>
-    <th>Оплата</th>
-    <th>Сумма</th>
-    <th>Статус</th>
-    </thead>
+                <th>ID</th>
+                <th>Дата</th>
+                <th>Платильщик</th>
+                <th>Оплата</th>
+                <th>Сумма</th>
+                <th>Статус</th>
+            </thead>
             <tbody>
 
-    {% for order in Orders %}
-    <tr>
-        <td>{{ order.id }}</td>
-        <td>{{ order.created }}</td>
-        <td>{{ order.organisation_payer }}</td>
-        <td>{{ order.paid }}</td>
-        <td>{{ order.total_price }}</td>
-        <td>{{ order.status }}</td>
-        </td>
-    </tr>
-    {% endfor %}
-          </tbody>
+            {% for order in Orders %}
+            <tr>
+                <td>{{ order.id }}</td>
+                <td>{{ order.created }}</td>
+                <td>{{ order.organisation_payer }}</td>
+                <td>{{ order.paid }}</td>
+                <td>{{ order.total_price }}</td>
+                <td>{{ order.status }}</td>
+                </td>
+            </tr>
+            {% endfor %}
+            </tbody>
         </table>
     </div>
 </div>
@@ -39,22 +39,27 @@
     <div class="col-md-12">
         <table class="table table-striped table-hover">
             <thead>
-    <th>ID</th>
-    <th>Preview</th>
-    <th>Link</th>
-    <th>Финишная обработка</th>
-    </thead>
-    {% for i in item %}
-    <tr>
-        <td>{{ i.id }}</td>
-        <td><a>{% load thumbnail %} <img src="{% thumbnail i.product.images 100x0 %}" class="image-detail"></a></td>
-        <td><a href="/media/{{ i.product }}" </a>Скачать</td>
-        <td><a href="{% url 'orders:about_file' i.id %}"</a>about</td>
-        <td>{{ i.product.material }}</td>
-        <!--            <td>{{ i.product.FinishWork }} </td>-->
-    </tr>
-    {% endfor %}
-          </tbody>
+            <th>ID</th>
+            <th>Preview</th>
+            <th>Link</th>
+            <th>Материал</th>
+            <th>Финишная обработка</th>
+            <th>О файле</th>
+            </thead>
+            {% for i in item %}
+            <tbody>
+            <tr>
+                <td>{{ i.id }}</td>
+                <td><a>{% load thumbnail %} <img src="{% thumbnail i.product.images 100x0 %}" class="image-detail"></a>
+                </td>
+                <td><a href="/media/{{ i.product }}" </a>Скачать</td>
+                <td>{{ i.product.material }}</td>
+                <td>{{ i.product.FinishWork }}</td>
+                <td><a href="{% url 'orders:about_file' i.id %}"</a>about</td>
+                <!--            <td>{{ i.product.FinishWork }} </td>-->
+            </tr>
+            {% endfor %}
+            </tbody>
         </table>
     </div>
 </div>
