--- a/orders/templates/all_view_orders_pay.html
+++ b/orders/templates/all_view_orders_pay.html
@@ -1,29 +1,39 @@
 {% extends 'base.html'%}
-    <title>{% block title %} Список Заказов В работе: {% endblock %}</title>
+<title>{% block title %} Список Заказов В работе: {% endblock %}</title>
 {% block body %}
 
 
 {% if object_list.count > 0 %}
-    <h2>Список Заказов В работе: </h2>
+<h2>Все оплаченные заказы: </h2>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>Заказ №</th>
+                <th>Платильщк</th>
+                <th>Оплачено</th>
+                <th>Каменты</th>
+                <th>Статус</th>
+                <th>Дата заказа</th>
+                <th>Дата готовности</th>
+            </thead>
+            <tbody>
+            {% for order in object_list %}
+            <tr>
+                <td>{{ order.id }}</td>
+                <td>{{ order.organisation_payer }}</td>
+                <td>{{ order.paid }}</td>
+                <td>{{ order.comments }}</td>
+                <td>{{ order.status }}</td>
+                <td>{{ order.created }}</td>
+                <td>{{ order.date_complete }}</td>
+                <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
 
-    <table>
-        <thead>
-           <th>Заказ №</th><th>Платильщк</th><th>Оплачено</th>
-           <th>Каменты</th><th>Статус</th><th>Дата заказа</th><th>Дата готовности</th>
-       </thead>
-        {% for order in object_list %}
-        <tr>
-            <td>{{ order.id }}</td>
-            <td>{{ order.organisation_payer }}</td>
-            <td>{{ order.paid }}</td>
-            <td>{{ order.comments }}</td>
-            <td>{{ order.status }}</td>
-            <td>{{ order.created }}</td>
-            <td>{{ order.date_complete }}</td>
-            <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
-        </tr>
-        {% endfor %}
-
-    </table>
-    {% endif %}
-    {% endblock %}
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+{% endif %}
+{% endblock %}
