--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -64,6 +64,7 @@
             <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:view_orders'%}">Мои заказы</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/createitem/">Добавить в заказ</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:view_all_orders' %}">Посмотреть все заказы</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:view_all_orders_pay' %}">Посмотреть все оплаченые заказы</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:view_all_files_for_work_in_orders' %}">Посмотреть все файлы для печати</a></li>
         </ul>
       </div>
