--- a/orders/templates/all_view_orders.html
+++ b/orders/templates/all_view_orders.html
@@ -4,7 +4,7 @@
 
 
 {% if Orders.count > 0 %}
-    <h2>Список Заказов В работе: </h2>
+    <h2>Список всех Заказов: </h2>
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
