--- a/orders/templates/view_all_files_for_work_in_orders.html
+++ b/orders/templates/view_all_files_for_work_in_orders.html
@@ -2,6 +2,7 @@
 <title>{% block title %} {{curent_order}} {% endblock %}</title>
 {% block body %}
 <h3> {{curent_order}}</h3>
+<h3>Все файлы поступившие в работу:</h3>
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
@@ -43,7 +44,7 @@
             <th>Preview</th>
             <th>Link</th>
             <th>Материал</th>
-            <th>Финишная обработка</th>
+            <th>Статус файла</th>
             <th>О файле</th>
             </thead>
             {% for i in item %}
@@ -54,9 +55,8 @@
                 </td>
                 <td><a href="/media/{{ i.product }}" </a>Скачать</td>
                 <td>{{ i.product.material }}</td>
-                <td>{{ i.product.FinishWork }}</td>
-                <td><a href="{% url 'orders:about_file' i.id %}"</a>about</td>
-                <!--            <td>{{ i.product.FinishWork }} </td>-->
+                <td>{{ i.product.status_product }}</td>
+                <td><a href="{% url 'orders:about_file' i.id %}"</a>О файле:</td>
             </tr>
             {% endfor %}
             </tbody>
