--- a/orders/templates/orderpay.html
+++ b/orders/templates/orderpay.html
@@ -4,24 +4,31 @@
 <h3> Страница оплаты</h3>
 <h5> Способы оплаты</h5>
 <h6>{{text}}</h6>
-    <table>
-        <thead>
-        <th>Дата</th>
-           <th>Платильщик</th><th>Оплата</th>
-           <th>Сумма</th><th>Статус</th>
-       </thead>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
+            <th>Дата</th>
+            <th>Платильщик</th>
+            <th>Оплата</th>
+            <th>Сумма</th>
+            <th>Статус</th>
+            </thead>
+            <tbody>
 
-        <tr>
-            <td>{{ Orders.created }}</td>
-            <td>{{ Orders.organisation_payer }}</td>
-            <td>{{ Orders.paid }}</td>
-            <td>{{ Orders.total_price }} руб. </td>
-            <td>{{ Orders.status }}</td>
+            <tr>
+                <td>{{ Orders.created }}</td>
+                <td>{{ Orders.organisation_payer }}</td>
+                <td>{{ Orders.paid }}</td>
+                <td>{{ Orders.total_price }} руб.</td>
+                <td>{{ Orders.status }}</td>
 
 
-
-            <td><a href="/orders/order_pay/{{order.id}}">Скачать счет</a>
-            </td>
-        </tr>
-            </table>
-{% endblock %}
+                <td><a href="/orders/order_pay/{{order.id}}">Скачать счет</a>
+                </td>
+            </tr>
+        </tbody>
+        </table>
+    </div>
+</div>
+        {% endblock %}
