--- a/orders/templates/orderpay.html
+++ b/orders/templates/orderpay.html
@@ -8,27 +8,30 @@
     <div class="col-md-12">
         <table class="table table-striped table-hover">
             <thead>
-            <th>Дата</th>
-            <th>Платильщик</th>
-            <th>Оплата</th>
-            <th>Сумма</th>
-            <th>Статус</th>
+            <tr>
+                <th>Дата</th>
+                <th>Платильщик</th>
+                <th>Оплата</th>
+                <th>Сумма</th>
+                <th>Статус</th>
             </thead>
             <tbody>
-
             <tr>
                 <td>{{ Orders.created }}</td>
                 <td>{{ Orders.organisation_payer }}</td>
                 <td>{{ Orders.paid }}</td>
                 <td>{{ Orders.total_price }} руб.</td>
                 <td>{{ Orders.status }}</td>
-
-
-                <td><a href="/orders/order_pay/{{order.id}}">Скачать счет</a>
+                <td><a href="/orders/order_pay/{{order.id}}">Скачать счет</a></td>
+                <td>
+                    <button type="submit" class="btn btn-primary"
+                            onClick="location.href='{% url 'orders:order_pay_check' Orders.id %}'">Потвердить оплату
+                    </button>
                 </td>
             </tr>
-        </tbody>
         </table>
+        </tbody>
     </div>
 </div>
-        {% endblock %}
+
+{% endblock %}
