--- a/files/templates/price.html
+++ b/files/templates/price.html
@@ -68,8 +68,25 @@
         </table>
     </div>
 </div>
-
-
 {% endif %}
+<h4>Финишная обработка: </h4>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
+            <th>Работа</th>
+            <th>Цена</th>
+            </thead>
+            <tbody>
+            {% for field in finishka %}
+            <tr>
+                <td>{{ field.work }}</td>
+                <td>{{ field.price }} руб.</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
 
 {% endblock %}
