--- a/orders/templates/orderpay.html
+++ b/orders/templates/orderpay.html
@@ -25,7 +25,7 @@
                 <td><a href="/orders/order_pay/{{order.id}}">Скачать счет</a></td>
                 <td>
                     <button type="submit" class="btn btn-primary"
-                            onClick="location.href='{% url 'orders:order_pay_check' Orders.id %}'">Потвердить оплату
+                            onClick="location.href='#'">Потвердить оплату
                     </button>
                 </td>
             </tr>
