--- a/orders/templates/report_complite_orders.html
+++ b/orders/templates/report_complite_orders.html
@@ -19,6 +19,8 @@
     </p>
 </form>
 <hr>
+{% if order.count > 0 %}
+
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
@@ -47,5 +49,6 @@
     </div>
 </div>
 
+    {% endif %}
 
 {% endblock %}
