--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -16,7 +16,7 @@
       <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
 
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:create_files' %}">Загрузить файл</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:upload_arh' %}}">Загрузить архив</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:upload_arh' %}">Загрузить архив</a>
                   <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'files:price' %}">Прайс-лист</a>
 
         <a class="me-3 py-2 link-body-emphasis text-decoration-none"  href="{% url 'files:all_files' %}">Все файлы</a>
