add unzip files

--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -91,6 +91,11 @@
             {% endfor %}
             </tbody>
         </table>
+                                      <td>
+                    <button type="submit" class="btn btn-primary"
+                            onClick="location.href='{% url 'orders:order_pay' Orders.id %}'">Оформить заказ</button>
+                </td>
+
     </div>
 </div>
 {% endblock %}
