--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -54,7 +54,6 @@
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'password_reset' %}">Сбросить пароль</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Персонал для разработчиков</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Другой</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Последний раз</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
@@ -80,8 +79,7 @@
         <div class="col-6 col-md">
         <h5>Доставка</h5>
         <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">рганизации</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Добавить организацию</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Выбор доставки</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Условия</a></li>
         </ul>
       </div>
