--- a/files/templates/files/product_form.html
+++ b/files/templates/files/product_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-    {% block title %} add Files {% endblock %}
+    {% block title %}Загрузка файла{% endblock %}
 
 {% block body %}
 <div class="containers">
