--- a/files/templates/files/product_form.html
+++ b/files/templates/files/product_form.html
@@ -7,7 +7,7 @@
 
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Сохранить</Update>
+    <button type="submit">Сохранить</button>
 </form>
 </div>
 {% endblock %}
