--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -31,10 +31,20 @@
                 <td>{{ order.status }}</td>
                 <td>{{ order.created }}</td>
                 <td>{{ order.date_complete }}</td>
-                <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
-                <td><a href="{% url 'orders:Delete_order' order.id %}">Удалить</a></td>
-                <td><a href="{% url 'orders:order_pay' order.id %}">Оплатить</a></td>
-                <td><a href="{% url 'orders:update_order' order.id %}">Редактировать</a></td>
+
+                {% if order.status.id >= 2 %}
+
+                    <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                {% else %}
+                    <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
+                    <td><a href="{% url 'orders:Delete_order' order.id %}">Удалить</a></td>
+                    <td><a href="{% url 'orders:order_pay' order.id %}">Оплатить</a></td>
+                    <td><a href="{% url 'orders:update_order' order.id %}">Редактировать</a></td>
+                {% endif %}
+
             </tr>
             {% endfor %}
             </tbody>
