add -id в заказы

--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -103,8 +103,7 @@
         </table>
         <td>
             <button type="submit" class="btn btn-primary"
-                    onClick="location.href='{% url 'orders:order_pay' Orders.id %}'">Оформить заказ
-            </button>
+                    onClick="location.href='{% url 'orders:order_pay' Orders.id %}'">Оформить заказ</button>
         </td>
 
     </div>
