--- a/orders/templates/neworder.html
+++ b/orders/templates/neworder.html
@@ -1,12 +1,12 @@
 {% extends 'base.html'%}
-    <title>{% block title %} Новый заказ{% endblock %}</title>
+<title>{% block title %} Новый заказ{% endblock %}</title>
 {% block body %}
 <h3>Добавить новый заказ</h3>
 <form method="post" , enctype="multipart/form-data">
 
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Добавить</button>
+    <button type="submit" class="btn btn-primary">Новый заказ</button>
 </form>
 
 {% endblock %}
