--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -6,6 +6,10 @@
 {% if Orders.count > 0 %}
     <h2>Список Заказов: </h2>
 <hr>
+
+
+<button type="submit" class="btn btn-primary"
+                    onClick="location.href='{% url 'orders:new_order' %}'">Создать заказ</button>
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
