--- a/account/templates/organisation_list.html
+++ b/account/templates/organisation_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-<title>{% block title %} Оганизации: {% endblock %}</title>
+<title>{% block title %} Организации: {% endblock %}</title>
 {% block body %}
 
     <h1>Мои организации: </h1>
