--- a/files/templates/price.html
+++ b/files/templates/price.html
@@ -15,11 +15,13 @@
             </thead>
             <tbody>
             {% for field in price_shirka %}
+            {% if field.is_active == True %}
             <tr>
                 <td>{{ field.name }}</td>
                 <td>{{ field.type_print }}</td>
                 <td>{{ field.price }} руб.</td>
             </tr>
+            {% endif %}
             {% endfor %}
             </tbody>
         </table>
@@ -37,11 +39,13 @@
             </thead>
             <tbody>
             {% for field in price_interierka %}
+            {% if field.is_active == True %}
             <tr>
                 <td>{{ field.name }}</td>
                 <td>{{ field.type_print }}</td>
                 <td>{{ field.price }} руб.</td>
             </tr>
+            {% endif %}
             {% endfor %}
             </tbody>
         </table>
@@ -58,11 +62,14 @@
             </thead>
             <tbody>
             {% for field in price_UV %}
+            {% if field.is_active == True %}
+
             <tr>
                 <td>{{ field.name }}</td>
                 <td>{{ field.type_print }}</td>
                 <td>{{ field.price }} руб.</td>
             </tr>
+            {% endif %}
             {% endfor %}
             </tbody>
         </table>
@@ -79,10 +86,13 @@
             </thead>
             <tbody>
             {% for field in finishka %}
+            {% if field.is_active == True %}
+
             <tr>
                 <td>{{ field.work }}</td>
                 <td>{{ field.price }} руб.</td>
             </tr>
+            {% endif %}
             {% endfor %}
             </tbody>
         </table>
