add templates Price is active

--- a/files/templates/calculator.html
+++ b/files/templates/calculator.html
@@ -5,6 +5,7 @@
 <form action="{% url 'files:calculator' %}"  method="post" , enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
+<!--    {% bootstrap_form form %}-->
     <button type="submit">Посчитать</button>
 </form>
 
