--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
+
 {% block title %}Редактировать профиль{% endblock %}
 {% block body %}
  <h1>Редактировать профиль</h1>
  <p>You can edit your account using the following form:</p>
  <form method="post" enctype="multipart/form-data">
- {{ user_form.as_p }}
- {{ profile_form.as_p }}
+  {{ user_form|crispy }}
+ {{ profile_form|crispy}}
  {% csrf_token %}
  <p><input type="submit" value="Изменть"></p>
  </form>
