--- a/files/templates/calculator.html
+++ b/files/templates/calculator.html
@@ -1,11 +1,14 @@
 {% extends 'base.html'%}
+{% load crispy_forms_tags %}
+
 <title>{% block title %} Калькулятор {% endblock %}</title>
 {% block body %}
 <h2>Калькулятор печати</h2>
 <form action="{% url 'files:calculator' %}"  method="post" , enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
-<!--    {% bootstrap_form form %}-->
+<!--    <table>{{ form.as_table }}</table>-->
+    {{ form|crispy }}
+
     <button type="submit">Посчитать</button>
 </form>
 
