--- a/files/templates/files/product_form.html
+++ b/files/templates/files/product_form.html
@@ -1,12 +1,14 @@
 {% extends 'base.html'%}
-    {% block title %}Загрузка файла{% endblock %}
+{% load crispy_forms_tags %}
+
+{% block title %}Загрузка файла{% endblock %}
 
 {% block body %}
 <div class="containers">
 <form method="post" , enctype="multipart/form-data">
 
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <button type="submit">Сохранить</button>
 </form>
 </div>
