--- a/files/templates/files/product_update_form.html
+++ b/files/templates/files/product_update_form.html
@@ -1,10 +1,10 @@
-
-
 {% block content %}
+{% load crispy_forms_tags %}
+
 <form method="post" , enctype="multipart/form-data">
 
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Сохранить</Update>
+    {{ form|crispy }}
+    <button type="submit">Сохранить</button>
 </form>
 {% endblock %}
