--- a/files/templates/files/upload_arh.html
+++ b/files/templates/files/upload_arh.html
@@ -1,10 +1,13 @@
 {% extends 'base.html'%}
+{% load crispy_forms_tags %}
+
 
 
 {% block body %}
 <form method="post" , enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
+
     <button type="submit">Сохранить</button>
 </form>
 {% endblock %}
