--- a/files/templates/product_update_form.html
+++ b/files/templates/product_update_form.html
@@ -1,4 +1,6 @@
 {% extends 'base.html'%}
+{% load crispy_forms_tags %}
+
 <title>{% block title %} Изменить {% endblock %}</title>
 {% block body %}
 
@@ -6,7 +8,8 @@
 <form method="post" , enctype="multipart/form-data">
 
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
+
     <button type="submit">Сохранить</button>
 </form>
 {% endblock %}
