--- a/orders/templates/all_view_orders.html
+++ b/orders/templates/all_view_orders.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 
-{% if Orders.count > 0 %}
+{% if object_list.count > 0 %}
     <h2>Список всех Заказов: </h2>
 <div class="row">
     <div class="col-md-12">
@@ -14,7 +14,7 @@
            <th>Каменты</th><th>Статус</th><th>Дата заказа</th><th>Дата готовности</th>
          </thead>
             <tbody>
-        {% for order in Orders %}
+        {% for order in object_list %}
         <tr>
             <td>{{ order.id }}</td>
             <td>{{ order.organisation_payer }}</td>
