--- a/account/templates/registration/password_change_form.html
+++ b/account/templates/registration/password_change_form.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
+
 {% block title %}Change your password{% endblock %}
 {% block body %}
- <h1>Change your password</h1>
- <p>Use the form below to change your password.</p>
- <form method="post">
- {{ form.as_p }}
- <p><input type="submit" value="Change"></p>
- {% csrf_token %}
- </form>
+<h1>Смена вашего пароля</h1>
+<p>Используйте форму ниже, чтобы изменить свой пароль.</p>
+<form method="post">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <button type="submit" class="btn btn-primary">Сменить пароль</button>
+
+
+</form>
 {% endblock %}
