--- a/account/templates/registration/password_reset_done.html
+++ b/account/templates/registration/password_reset_done.html
@@ -2,7 +2,7 @@
 {% block title %}Reset your password{% endblock %}
 {% block body %}
  <h1>Reset your password</h1>
- <p>We've emailed you instructions for setting your password.</p>
- <p>If you don't receive an email, please make sure
- you've entered the address you registered with.</p>
+ <p>Мы отправили вам по электронной почте инструкции по установке вашего пароля.</p>
+ <p>Если вы не получили электронное письмо, пожалуйста, убедитесь
+, что вы ввели адрес, по которому регистрировались.</p>
 {% endblock %}
