--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -3,12 +3,13 @@
 
 {% block title %}Редактировать профиль{% endblock %}
 {% block body %}
- <h1>Редактировать профиль</h1>
- <p>You can edit your account using the following form:</p>
- <form method="post" enctype="multipart/form-data">
-  {{ user_form|crispy }}
- {{ profile_form|crispy}}
- {% csrf_token %}
- <p><input type="submit" value="Изменть"></p>
- </form>
+<h1>Редактировать профиль</h1>
+<p>You can edit your account using the following form:</p>
+<form method="post" enctype="multipart/form-data">
+    {{ user_form|crispy }}
+    {{ profile_form|crispy}}
+    {% csrf_token %}
+    <button type="submit" class="btn btn-primary">Изменить</button>
+
+</form>
 {% endblock %}
