--- a/account/templates/account/organisation_update_form.html
+++ b/account/templates/account/organisation_update_form.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block title %} Редактировать организацию{% endblock %}
+{% load crispy_forms_tags %}
+
 {% block body %}
 
 <form method="post">{% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <input type="submit" value="Update">
 </form>
 
