--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,11 +1,15 @@
-{% extends "base.html" %}
-{% block title %}Create an account{% endblock %}
-{% block body %}
- <h1>Create an account</h1>
- <p>Please, sign up using the following form:</p>
- <form method="post">
- {{ user_form.as_p }}
- {% csrf_token %}
- <p><input type="submit" value="Create my account"></p>
- </form>
-{% endblock %}
+<!--{% extends "base.html" %}-->
+<!--{% load crispy_forms_tags %}-->
+
+<!--{% block title %}Создать учетную запись{% endblock %}-->
+<!--{% block body %}-->
+<!-- <h1>Создать учетную запись</h1>-->
+<!-- <p>Пожалуйста, зарегистрируйтесь, используя следующую форму:</p>-->
+<!-- <form method="post">-->
+<!--&lt;!&ndash; {{ user_form.as_p }}&ndash;&gt;-->
+<!-- {{ user_form|crispy }}-->
+
+<!-- {% csrf_token %}-->
+<!-- <p><input type="submit" value="Create my account"></p>-->
+<!-- </form>-->
+<!--{% endblock %}-->
