--- a/account/templates/account/register_done.html
+++ b/account/templates/account/register_done.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Welcome{% endblock %}
+{% block title %}Добро пожаловать {% endblock %}
 {% block body %}
  <h1>Добро пожаловать {{ new_user.first_name }}!</h1>
  <p>
