--- a/account/templates/registration/password_reset_form.html
+++ b/account/templates/registration/password_reset_form.html
@@ -1,11 +1,16 @@
 {% extends "base.html" %}
-<title>{% block title %}Reset your password{% endblock %}</title>
+{% load crispy_forms_tags %}
+
+<title>{% block title %}Сброс забытого пароля{% endblock %}</title>
 {% block body %}
- <h1>Forgotten your password?</h1>
- <p>Enter your e-mail address to obtain a new password.</p>
- <form method="post">
- {{ form.as_p }}
- <p><input type="submit" value="Send e-mail"></p>
- {% csrf_token %}
- </form>
+<h1>Забыли свой пароль?</h1>
+<p>Введите свой адрес электронной почты, чтобы получить новый пароль. Ссылка для смены пароля придет на вашу почту. </p>
+<p>Необходимо ввести тот почтовый адрес с которым вы зарегистрированны в системе.</p>
+<form method="post">
+    <!-- {{ form.as_p }}-->
+    {{ form|crispy }}
+    <button type="submit" class="btn btn-primary">Сбросить</button>
+
+    {% csrf_token %}
+</form>
 {% endblock %}
