--- a/files/templates/index.html
+++ b/files/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
     <title>{% block title %} Главная страница {% endblock %}</title>
 {% block body %}
-{% if products.count > 0 %}
+{% if object_list.count > 0 %}
 <h2>Список файлов: </h2>
 <hr>
 <div class="row">
@@ -20,7 +20,7 @@
                 <th>Дата</th>
        </thead>
             <tbody>
-                {% for product in products %}
+                {% for product in object_list %}
                 <tr>
                     <td>{{ product.id }}</td>
                     <td><a>{% load thumbnail %} <img src="{% thumbnail product.images 100x0 %}" class="image-detail"></a></td>
