--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -1,14 +1,18 @@
 {% extends 'base.html' %}
 {% block title %}Зарегистрируйтесь!{% endblock %}
+{% load crispy_forms_tags %}
+
 
 {% block body %}
- <h1>Create an account</h1>
- <p>Please, sign up using the following form:</p>
+<h1>Создать учетную запись</h1>
+<p>Пожалуйста, зарегистрируйтесь, используя следующую форму:</p>
 
 
-    <form action="{% url 'register' %}" method="post">
-        {{ form }}
-        {% csrf_token %}
-    <button type="submit" class="btn btn-success">submit</button>
-    </form>
+<form action="{% url 'register' %}" method="post">
+    {{ form|crispy }}
+
+    <!--        {{ form }}-->
+    {% csrf_token %}
+    <button type="submit" class="btn btn-success">Зарегистрироваться</button>
+</form>
 {% endblock %}
