add port mapping

--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
+
 {% block title %}Зарегистрируйтесь!{% endblock %}
 {% load crispy_forms_tags %}
 
+<head>
+
+</head>
 
 {% block body %}
 <h1>Создать учетную запись</h1>
