--- a/users/templates/registration/verify_email.html
+++ b/users/templates/registration/verify_email.html
@@ -1,6 +1,6 @@
 {% autoescape off %}
 
-Hi {{ user.get_username }},
+Здраавствуйте {{ user.get_username }},
 Пожалуйста перейдите по ссылке чтобы закончить регистрацию
 http://{{ domain }}{% url 'verify_email' uidb64=uid token=token %}
 
