--- a/account/templates/registration/password_reset_done.html
+++ b/account/templates/registration/password_reset_done.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Reset your password{% endblock %}
 {% block body %}
- <h1>Reset your password</h1>
+ <h1>Сброс вашего пароля</h1>
  <p>Мы отправили вам по электронной почте инструкции по установке вашего пароля.</p>
  <p>Если вы не получили электронное письмо, пожалуйста, убедитесь
 , что вы ввели адрес, по которому регистрировались.</p>
