--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -9,7 +9,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!------ Include the above in your HEAD tag ---------->
 
-    <title>My Awesome Login Page</title>
+    <title>Сервис он-лайн заказа печати баннеров</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -59,7 +59,7 @@
 
             <div class="mt-4">
                 <div class="d-flex justify-content-center links">
-                    У вас нет учетной записи? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
+                    У вас нет учетной записи? <a href="{% url 'register' %}" class="ml-2">Регистрация</a>
                 </div>
                 <div class="d-flex justify-content-center links">
                     <a href="{% url 'password_reset' %}">Забыли пароль?</a>
