--- a/account/templates/registration/password_ change_done.html
+++ b/account/templates/registration/password_ change_done.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Password changed{% endblock %}
+{% block title %}Пароль изменен{% endblock %}
 {% block body %}
- <h1>Password changed</h1>
- <p>Your password has been successfully changed.</p>
+ <h1>Пароль изменен</h1>
+ <p>Ваш пароль успешно изменен.</p>
 {% endblock %}
