--- a/account/templates/registration/password_change_form.html
+++ b/account/templates/registration/password_change_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Change your password{% endblock %}
+{% block title %}Смена вашего пароля{% endblock %}
 {% block body %}
 <h1>Смена вашего пароля</h1>
 <p>Используйте форму ниже, чтобы изменить свой пароль.</p>
