--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -24,9 +24,9 @@
                 <td>{{ Orders.status }}</td>
                 <!--                <td><a href="{% url 'orders:order_pay' Orders.id %}">Оплатить</a>-->
                 <td>
-                    <button type="submit" class="btn btn-primary"
-                            onClick="location.href='{% url 'orders:order_pay' Orders.id %}'">Оплатить
-                    </button>
+<!--                    <button type="submit" class="btn btn-primary"-->
+<!--                            onClick="location.href='{% url 'orders:order_pay' Orders.id %}'">Оплатить-->
+<!--                    </button>-->
                 </td>
             </tr>
         </table>
