--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -57,7 +57,7 @@
                 <td><a>{% load thumbnail %} <img src="{% thumbnail item.images 100x0 %}" class="image-detail"></a></td>
                 <td>{{ item.material }}</td>
                 <td>{{ item.width }}x{{ item.length }} см.</td>
-                <td>{{ item.product.quantity }} шт.</td>
+                <td>{{ item.quantity }} шт.</td>
                 <td>{{ item.FinishWork }}</td>
                 <td>{{ item.Fields }}</td>
                 <td>{{ item.price }}</td>
