add page uv_print.html and large_print.html

--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -11,8 +11,8 @@
 
 
 <p><a href=" {% url 'files:create_inter' %}">Загрузка файлов для Интерьерной печати</a></p>
-<p><a href=" {% url 'files:create_inter' %}">Загрузка файлов для Широкоформатной печати</a></p>
-<p><a href=" {% url 'files:create_inter' %}">Загрузка файлов для UV-печати</a></p>
+<p><a href=" {% url 'files:create_large' %}">Загрузка файлов для Широкоформатной печати</a></p>
+<p><a href=" {% url 'files:create_uv' %}">Загрузка файлов для UV-печати</a></p>
 
 {% endblock %}
 
