--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -10,6 +10,7 @@
 <p>Раздел организации <a href="{% url 'account:list_organisation' %}">Мои организации</a>
 
 
+<p><a href=" {% url 'files:create_rollup' %}">Заказ мобильных стендов Roll Up</a></p>
 <p><a href=" {% url 'files:create_inter' %}">Загрузка файлов для Интерьерной печати</a></p>
 <p><a href=" {% url 'files:create_large' %}">Загрузка файлов для Широкоформатной печати</a></p>
 <p><a href=" {% url 'files:create_uv' %}">Загрузка файлов для UV-печати</a></p>
