add save paylink

--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -125,6 +125,7 @@
         </td>
 {% else %}
                     <td><a href="/media/{{Orders.order_pdf_file}}">Скачать счет</a></td>
+                    <td><a href="{{Orders.pay_link}}">Оплатить картой</a></td>
 
 {% endif %}
 
